# twitter-to-discord

./: .gitignore  Dockerfile  LICENSE  README.md  exceptions.py  fly.toml  main.py  pyproject.toml
.github/workflows/: fly.yaml
actions/: admin.py  subscribe.py
models/: base.py  config.py  database.py
services/: database.py  x.py
